<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.badari.mks.NavigatorActivity"
    tools:showIn="@layout/app_bar_navigator">


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp">

    </FrameLayout>


    <!--<Button
        android:id="@+id/Button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:text="My Dreams"
        />-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="358dp"

        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Welcome To Mallik Solutions P.v.t L.t.d.To the world of dreams where you can fulfill your dreams and you can earn money in a simple manner.Click on My Dreams."
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="28dp" />




</RelativeLayout>
