<resources>
    <string name="app_name">MKS</string>
    <string name="title_activity_navigator">NavigatorActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
